--- a/xcode/Turntablism/Turntablism/Base.lproj/Main.storyboard
+++ b/xcode/Turntablism/Turntablism/Base.lproj/Main.storyboard
@@ -156,6 +156,7 @@ See all specifications at http://www.pioneerdj.com/en/product/turntable/plx-1000
                                         <rect key="frame" x="0.0" y="0.0" width="95" height="22"/>
                                         <state key="normal" title=" Blue" image="LedBlue">
                                             <color key="titleColor" red="0.18823529410000001" green="0.64705882349999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
                                             <action selector="resetButton:" destination="S2q-IT-Bqz" eventType="touchUpInside" id="G3i-k5-Uq9"/>
@@ -215,7 +216,7 @@ See all specifications at http://www.pioneerdj.com/en/product/turntable/plx-1000
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Model" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u5A-RB-L2o">
                                         <rect key="frame" x="0.0" y="0.0" width="49" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="mko-rv-w3G">
@@ -227,8 +228,26 @@ See all specifications at http://www.pioneerdj.com/en/product/turntable/plx-1000
                                     </switch>
                                 </subviews>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ZBA-i9-LQI">
+                                <rect key="frame" x="508" y="225" width="49" height="64"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Live" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KEB-Jf-BVQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="49" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ex4-T2-fwg">
+                                        <rect key="frame" x="0.0" y="33" width="51" height="31"/>
+                                        <color key="onTintColor" red="0.83541637660000001" green="0.68664735560000001" blue="0.2157536149" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="liveButton:" destination="S2q-IT-Bqz" eventType="valueChanged" id="t7L-1Q-Qaw"/>
+                                        </connections>
+                                    </switch>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.27695745229721069" green="0.27701115608215332" blue="0.27695408463478088" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="8lR-Qw-1gE" secondAttribute="trailing" constant="10" id="5s4-y9-YGh"/>
                             <constraint firstAttribute="trailingMargin" secondItem="n2I-rM-6WS" secondAttribute="trailing" constant="23" id="6GV-G8-g2z"/>
@@ -236,8 +255,10 @@ See all specifications at http://www.pioneerdj.com/en/product/turntable/plx-1000
                             <constraint firstItem="pcj-jl-x0T" firstAttribute="top" secondItem="n2I-rM-6WS" secondAttribute="bottom" constant="39" id="GIN-Dd-Prm"/>
                             <constraint firstAttribute="trailingMargin" secondItem="BcQ-cX-KuY" secondAttribute="trailing" constant="-20" id="R3a-6Y-cLj"/>
                             <constraint firstAttribute="trailingMargin" secondItem="pcj-jl-x0T" secondAttribute="trailing" constant="23" id="Tky-DN-PSs"/>
+                            <constraint firstItem="ZBA-i9-LQI" firstAttribute="top" secondItem="pcj-jl-x0T" secondAttribute="bottom" constant="8" id="e7O-vI-QOF"/>
                             <constraint firstItem="n2I-rM-6WS" firstAttribute="top" secondItem="flW-5u-JGL" secondAttribute="bottom" constant="28" id="jYf-GI-AB5"/>
                             <constraint firstItem="8lR-Qw-1gE" firstAttribute="leading" secondItem="DIe-Cp-71Q" secondAttribute="leadingMargin" constant="11" id="ofF-nF-QgY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ZBA-i9-LQI" secondAttribute="trailing" constant="23" id="q9o-dX-PEs"/>
                             <constraint firstItem="BcQ-cX-KuY" firstAttribute="top" secondItem="flW-5u-JGL" secondAttribute="bottom" constant="8" id="u11-ha-Cnl"/>
                             <constraint firstItem="8lR-Qw-1gE" firstAttribute="top" secondItem="BcQ-cX-KuY" secondAttribute="bottom" constant="28" id="vCf-Hk-qj5"/>
                             <constraint firstItem="BcQ-cX-KuY" firstAttribute="leading" secondItem="DIe-Cp-71Q" secondAttribute="leadingMargin" constant="-20" id="vi6-52-MYl"/>
@@ -248,6 +269,7 @@ See all specifications at http://www.pioneerdj.com/en/product/turntable/plx-1000
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imageview" destination="BcQ-cX-KuY" id="gNR-EA-bha"/>
+                        <outlet property="modelswitch" destination="mko-rv-w3G" id="03U-dF-NTa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LRp-xn-dXS" userLabel="First Responder" sceneMemberID="firstResponder"/>
